# docflow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docflow.bat  pyproject.toml  requirements-dev.txt  setup.cfg  tmp_check_env.py  tmp_validate_configs.py
.github/workflows/: ci.yml
config/: ci_demo.yaml  example.config.yaml  example.config_unified_kb.yaml  example.config_with_attachments.yaml  schema.yaml
config/templates/: demo_template.docx
example/: config.yaml  multiple_outputs_config.yaml
example/data/: dati_vendite.json
example/scripts/: analizzatore_dati.py  riassunto_prompt.j2
example/templates/: report_template.docx
src/: __init__.py
src/docflow/: cli.py  config.py  errors.py  logging_lib.py
src/docflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/docflow/adapters/: base.py  docx_adapter.py  pptx_adapter.py
src/docflow/ai/: client.py  factory.py
src/docflow/cli/: __init__.py  app.py
src/docflow/core/: context.py  registry.py  results.py  workflow.py
src/docflow/kb/: __init__.py  loader.py  strategies.py
src/docflow/runtime/: orchestrator.py  prompt_builder.py
tests/: conftest.py  test_actions_core.py  test_adapters.py  test_ai_factory.py  test_ai_providers.py  test_attachments.py  test_cli_help.py  test_cli_run_verbose.py  test_e2e_attachments.py  test_e2e_smoke.py  test_examples_e2e.py  test_kb_loader.py  test_kb_strategies.py  test_logging_json.py  test_multiple_outputs.py  test_orchestrator.py  test_prompt_builder.py  test_run.py  test_unified_kb.py  test_workflow_core.py
(+6 files in other folders)
